Arreglo bug color blanco
Arreglado el bug que ponía bloques de color rojo al pulsar el color blanco en la UI

--- a/TFG jmorenomorales Buildcube/Assembly-CSharp.csproj
+++ b/TFG jmorenomorales Buildcube/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{BA7CED38-E5DD-D71B-A2C7-1B387954F737}</ProjectGuid>
+    <ProjectGuid>{F4A338E3-D653-2A83-3C80-4E036B2A4116}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -75,19 +75,19 @@
     <None Include="Assets\Vuforia\Shaders\DepthContour.shader" />
     <None Include="Assets\Vuforia\Shaders\Text3D.shader" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -294,13 +294,13 @@
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/Jorge/Desktop/TFG jmorenomorales Buildcube Semana 3,4/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/Jorge/Documents/GitHub/TFG-Buildcube/TFG jmorenomorales Buildcube/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -650,11 +650,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="VuforiaScripts.csproj">
-      <Project>{86FD7C05-DBF7-B177-CBAD-1DC30EAFEC90}</Project>
+      <Project>{995496B8-E54F-897A-2A05-C77146147400}</Project>
       <Name>VuforiaScripts</Name>
     </ProjectReference>
     <ProjectReference Include="VuforiaEditorScripts.csproj">
-      <Project>{821E1213-7366-1947-60F7-DDB4E80B9485}</Project>
+      <Project>{28B4EF54-DA5A-C506-9008-162ABF0B66C1}</Project>
       <Name>VuforiaEditorScripts</Name>
     </ProjectReference>
   </ItemGroup>
